Details
-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.7.0
-
9ffb65683ae756697bfc98490d25c71e66fc77f8
Description
The shutdown sequence of Qt3D needs to be made more robust. We have some complex threading going on as well as OpenGL resources to release.
There still remains an issue with shutting down the render thread cleanly and a crash somewhere inside of QFontCache when destroying the QGuiApplication.
Attachments
Issue Links
- duplicates
-
QTBUG-51035 [5.6 and GIT] renderer shutdown segfault
-
- Closed
-
- relates to
-
QTBUG-51421 Check QAbstractAspect public API
-
- Closed
-
-
QTBUG-51035 [5.6 and GIT] renderer shutdown segfault
-
- Closed
-