Release the TLS for the main thread's change queue in the arbiter

This solves the QFontCache shutdown bug. Now I think all that is left
it to shutdown the render submission thread cleanly.

Task-number: QTBUG-42353
Change-Id: If17c62680302cffa266782261400ae44bfbac612
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>